Fix style on mobile

--- a/static/css/markdown.css
+++ b/static/css/markdown.css
@@ -182,6 +182,11 @@
         padding: 1em;
     }
 
+    .md-content p {
+        text-align: justify;
+        text-justify: inter-word;
+    }
+
     .md-table-of-contents-desktop {
         display: none;
     }
